--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									</ul> -->
 								</li>
 							      <li class="nav-item">
-                                                             <a class="nav-link tm-nav-link" href="CV.html">CV</a>
+                                                             <a class="nav-link tm-nav-link" href="Eminem.html">Eminem</a>
                                                               </li> 
 								<!-- <li class="menu-item menu-item-has-children">
 									<a href="works.html">Works</a>
